<resources>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
     <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    
     <string name="weibosdk_comment">评论</string>
      <string name="weibosdk_forward">转发</string>
       <string name="weibosdk_fav">收藏</string>
       <string name="testcontent"></string>
    <string name="app_name">One</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="front_page">首页</string>
    <string name="content">内容</string>
    <string name="question">问题</string>
    <string name="fav">收藏</string>
    <string name="more">更多</string>
    <string name="hints">
        毕竟只是太短的梦，彼此终于退回陌生的开始。
      </string>
     <string name="content_content">
        毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;
        毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，彼此终于退回陌生的开始。\n
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，
        彼此终于退回陌生的开始。我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
     我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，\n
     彼此终于退回陌生的开始。王力宏 《两个人并不等于我们》  毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，
        彼此终于退回陌生的开始。我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
     我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，
     彼此终于退回陌生的开始。王力宏 《两个人并不等于我们》  毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;
        毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，\n
        彼此终于退回陌生的开始。我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
     我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，
     彼此终于退回陌生的开始。王力宏 《两个人并不等于我们》  毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。\n
        毕竟只是太短的梦，彼此终于退回陌生的开始。我加上你两个人，并不等于我们;
        毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，彼此终于退回陌生的开始。
        我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，
        彼此终于退回陌生的开始。我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。
     我加上你两个人，并不等于我们;毕竟只是太短的梦，彼此终于退回陌生的开始。毕竟只是太短的梦，\n
     彼此终于退回陌生的开始。王力宏 《两个人并不等于我们》</string>
</resources>