<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#E2E7F7" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                style="@style/top_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <ImageView
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/btn_fav2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="12" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/btn_front_page"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:checked="true"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/front_page" />

            <RadioButton
                android:id="@+id/btn_content"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:text="@string/content" />

            <RadioButton
                android:id="@+id/btn_question"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:text="@string/question" />

            <RadioButton
                android:id="@+id/btn_fav"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:text="@string/fav" />

            <RadioButton
                android:id="@+id/btn_more"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>